Fix logo z-index

--- a/packages/webapp/src/components/NavBar/NavBar.module.css
+++ b/packages/webapp/src/components/NavBar/NavBar.module.css
@@ -12,7 +12,7 @@
 
 .navBarBrand {
   position: relative;
-  z-index: 2;
+  /*z-index: 2;*/
   padding: 5px;
 }
 
